refactor(movies): use manual DTOs in movie mapper